# epimut-load

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: example_config.yaml
data/input/: example_metadata.csv  example_methylation.csv
src/epimut_load/: OLDcore.py  cli.py  core.py
